tests/ui/parser/trailing_separators.stderr
error: expected `;`, found `}`
  --> $DIR/trailing_separators.sol:2:11
   |
LL |     uint x
   |           ^ expected `;`
LL | }
   | ^ unexpected token
   |

error: trailing `,` separator is not allowed
  --> $DIR/trailing_separators.sol:6:6
   |
LL |     V,
   |      ^
   |

error: trailing `,` separator is not allowed
  --> $DIR/trailing_separators.sol:9:17
   |
LL | function f(E arg,) {
   |                 ^
   |

error: aborting due to 3 previous errors

